@@ -31,6 +31,8 @@ import io.kubernetes.client.openapi.models.V1PodSpec;
 import io.kubernetes.client.openapi.models.V1PodStatus;
 import oracle.kubernetes.operator.helpers.DomainPresenceInfo;
 import oracle.kubernetes.operator.helpers.KubernetesTestSupport;
+import oracle.kubernetes.operator.logging.LoggingFacade;
+import oracle.kubernetes.operator.logging.LoggingFactory;
 import oracle.kubernetes.operator.tuning.TuningParameters;
 import oracle.kubernetes.operator.tuning.TuningParametersStub;
 import oracle.kubernetes.operator.utils.WlsDomainConfigSupport;
@@ -45,6 +47,7 @@ import oracle.kubernetes.weblogic.domain.DomainConfigurator;
 import oracle.kubernetes.weblogic.domain.DomainConfiguratorFactory;
 import oracle.kubernetes.weblogic.domain.model.ClusterCondition;
 import oracle.kubernetes.weblogic.domain.model.ClusterConditionType;
+import oracle.kubernetes.weblogic.domain.model.ClusterResource;
 import oracle.kubernetes.weblogic.domain.model.ClusterStatus;
 import oracle.kubernetes.weblogic.domain.model.DomainCondition;
 import oracle.kubernetes.weblogic.domain.model.DomainResource;
@@ -57,6 +60,9 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import static oracle.kubernetes.common.logging.MessageKeys.CLUSTER_NOT_READY;
+import static oracle.kubernetes.common.logging.MessageKeys.NON_CLUSTERED_SERVERS_NOT_READY;
+import static oracle.kubernetes.common.logging.MessageKeys.NO_APPLICATION_SERVERS_READY;
 import static oracle.kubernetes.common.logging.MessageKeys.SERVER_POD_EVENT_ERROR;
 import static oracle.kubernetes.operator.DomainProcessorTestSetup.NS;
 import static oracle.kubernetes.operator.DomainProcessorTestSetup.UID;
@@ -99,9 +105,11 @@ import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.junit.MatcherAssert.assertThat;
 
 abstract class DomainStatusUpdateTestBase {
+  private static final LoggingFacade LOGGER = LoggingFactory.getLogger("Operator", "Operator");
+
   private static final String NAME = UID;
   private static final String ADMIN = "admin";
-  public static final String CLUSTER = "cluster1";
+  private static final String CLUSTER = "cluster1";
   private static final String IMAGE = "initialImage:0";
   private final TerminalStep endStep = new TerminalStep();
   private final KubernetesTestSupport testSupport = new KubernetesTestSupport();
@@ -236,10 +244,9 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void statusStep_definesClusterFromWlsConfig() {
-    configureDomain().withAllowReplicasBelowMinDynClusterSize(false);
     defineScenario()
           .withCluster("clusterA", "server3", "server4")
-          .withDynamicCluster("clusterB", 2, 8)
+          .withDynamicCluster("clusterB", 0, 8)
           .notStarting("server4")
           .build();
 
@@ -248,18 +255,18 @@ abstract class DomainStatusUpdateTestBase {
     assertThat(getRecordedDomain(),
           hasStatusForCluster("clusterA").withMinimumReplicas(0).withMaximumReplicas(2));
     assertThat(getRecordedDomain(),
-          hasStatusForCluster("clusterB").withMinimumReplicas(2).withMaximumReplicas(8));
+          hasStatusForCluster("clusterB").withMinimumReplicas(0).withMaximumReplicas(8));
   }
 
   @Test
   void statusStep_definesClusterReplicaGoalFromDomain() {
-    configureDomain().configureCluster("clusterA").withReplicas(3);
-    configureDomain().configureCluster("clusterB").withReplicas(5);
-    domain.getSpec().setAllowReplicasBelowMinDynClusterSize(false);
+    configureDomain().configureCluster(info, "clusterA").withReplicas(3);
+    configureDomain().configureCluster(info,"clusterB").withReplicas(5);
     defineScenario()
           .withCluster("clusterA", "server1", "server2", "server3", "server4")
           .withDynamicCluster("clusterB", 2, 8)
           .build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -307,13 +314,23 @@ abstract class DomainStatusUpdateTestBase {
     domain.setStatus(
         new DomainStatus()
             .withServers(
-                Collections.singletonList(
+                List.of(
+                    new ServerStatus()
+                        .withState(RUNNING_STATE)
+                        .withStateGoal(RUNNING_STATE)
+                        .withServerName("admin")
+                        .withNodeName("node")
+                        .withIsAdminServer(true)
+                        .withPodPhase(V1PodStatus.PhaseEnum.RUNNING)
+                        .withPodReady("True")
+                        .withHealth(overallHealth("health")),
                     new ServerStatus()
                         .withState(SHUTDOWN_STATE)
                         .withStateGoal(SHUTDOWN_STATE)
                         .withServerName("server1")
                         .withHealth(overallHealth("health1"))))
-              .addCondition(new DomainCondition(AVAILABLE).withStatus(false))
+              .addCondition(new DomainCondition(AVAILABLE).withStatus(false)
+                  .withMessage(LOGGER.formatMessage(NO_APPLICATION_SERVERS_READY)))
               .addCondition(new DomainCondition(COMPLETED).withStatus(true)));
 
     testSupport.clearNumCalls();
@@ -456,7 +473,7 @@ abstract class DomainStatusUpdateTestBase {
   }
 
   @Test
-  void whenNoServersRunning_establishAvailableConditionFalse() {   
+  void whenNoServersReady_establishAvailableConditionFalse() {
     defineScenario()
           .withServers("server1", "server2")
           .withServersReachingState(SHUTDOWN_STATE, "server1", "server2")
@@ -464,7 +481,8 @@ abstract class DomainStatusUpdateTestBase {
 
     updateDomainStatus();
 
-    assertThat(getRecordedDomain(), hasCondition(AVAILABLE).withStatus(FALSE));
+    assertThat(getRecordedDomain(), hasCondition(AVAILABLE).withStatus(FALSE)
+                                         .withMessageContaining(LOGGER.formatMessage(NO_APPLICATION_SERVERS_READY)));
   }
 
   @Test
@@ -657,8 +675,9 @@ abstract class DomainStatusUpdateTestBase {
   @Test
   void whenRollInProcessAndReplicasTooHighAndAllServersRunning_removeRollingCondition() {
     domain.getStatus().addCondition(new DomainCondition(ROLLING));
-    info.setReplicaCount("cluster1", 5);
+    configureDomain().configureCluster(info, "cluster1").withReplicas(5);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -668,8 +687,9 @@ abstract class DomainStatusUpdateTestBase {
   @Test
   void whenRollInProcessAndReplicasTooHighAndAllServersRunning_generateDomainRollCompletedEvent() {
     domain.getStatus().addCondition(new DomainCondition(ROLLING));
-    info.setReplicaCount("cluster1", 5);
+    configureDomain().configureCluster(info, "cluster1").withReplicas(5);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -996,8 +1016,9 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenReplicaCountExceedsMaxReplicasForDynamicCluster_domainIsNotCompleted() {
-    configureDomain().configureCluster("cluster1").withReplicas(5);
+    configureDomain().configureCluster(info,"cluster1").withReplicas(5);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1017,11 +1038,10 @@ abstract class DomainStatusUpdateTestBase {
   }
 
   @Test
-  void whenReplicaCountBelowMinReplicasForDynamicClusterAndNotAllowed_domainIsNotAvailable() {
-    configureDomain().withAllowReplicasBelowMinDynClusterSize(false);
+  void whenReplicaCountIsZero_domainIsNotAvailable() {
     defineScenario()
           .withDynamicCluster("cluster1", 3, 4)
-          .notStarting("ms3", "ms4")
+          .notStarting("ms1", "ms2", "ms3", "ms4")
           .build();
 
     updateDomainStatus();
@@ -1031,8 +1051,9 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenReplicaCountWithinMaxUnavailableOfReplicas_domainIsAvailable() {
-    configureDomain().configureCluster("cluster1").withReplicas(5).withMaxUnavailable(1);
+    configureDomain().configureCluster(info,"cluster1").withReplicas(5).withMaxUnavailable(1);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1041,18 +1062,23 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenReplicaCountNotWithinMaxUnavailableOfReplicas_domainIsNotAvailable() {
-    configureDomain().configureCluster("cluster1").withReplicas(20).withMaxUnavailable(1);
+    configureDomain().configureCluster(info,"cluster1").withReplicas(20).withMaxUnavailable(1);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
-    assertThat(getRecordedDomain(), hasCondition(AVAILABLE).withStatus(FALSE));
+    assertThat(getRecordedDomain(), hasCondition(AVAILABLE).withStatus(FALSE)
+        .withMessageContaining(LOGGER.formatMessage(CLUSTER_NOT_READY, "cluster1", 19, 4)));
   }
+
+  // todo add hasCondition matcher for cluster status
 
   @Test
   void whenReplicaCountWithinMaxUnavailableOfReplicas_establishClusterAvailableConditionTrue() {
-    configureDomain().configureCluster("cluster1").withReplicas(5).withMaxUnavailable(1);
+    configureDomain().configureCluster(info,"cluster1").withReplicas(5).withMaxUnavailable(1);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1065,8 +1091,9 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenReplicaCountNotWithinMaxUnavailableOfReplicas_establishClusterAvailableConditionFalse() {
-    configureDomain().configureCluster("cluster1").withReplicas(20).withMaxUnavailable(1);
+    configureDomain().configureCluster(info,"cluster1").withReplicas(20).withMaxUnavailable(1);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1079,8 +1106,9 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenClusterIsIntentionallyShutdown_establishClusterAvailableConditionTrue() {
-    configureDomain().configureCluster("cluster1").withReplicas(0).withMaxUnavailable(1);
+    configureDomain().configureCluster(info, "cluster1").withReplicas(0).withMaxUnavailable(1);
     defineScenario().withDynamicCluster("cluster1", 0, 0).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1093,8 +1121,9 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenClusterIsIntentionallyShutdown_establishClusterCompletedConditionTrue() {
-    configureDomain().configureCluster("cluster1").withReplicas(0).withMaxUnavailable(1);
+    configureDomain().configureCluster(info, "cluster1").withReplicas(0).withMaxUnavailable(1);
     defineScenario().withDynamicCluster("cluster1", 0, 0).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1107,8 +1136,9 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenClusterHasTooManyReplicas_establishClusterCompletedConditionFalse() {
-    configureDomain().configureCluster("cluster1").withReplicas(20).withMaxUnavailable(1);
+    configureDomain().configureCluster(info, "cluster1").withReplicas(20).withMaxUnavailable(1);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1121,8 +1151,9 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenAllDesiredServersRunning_establishClusterCompletedConditionTrue() {
-    configureDomain().configureCluster("cluster1").withReplicas(4).withMaxUnavailable(1);
+    configureDomain().configureCluster(info, "cluster1").withReplicas(4).withMaxUnavailable(1);
     defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1135,12 +1166,13 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenAllDesiredServersRunningButSomeShutdown_establishClusterCompletedConditionTrue() {
-    configureDomain().configureCluster("cluster1").withReplicas(2).withMaxUnavailable(1);
+    configureDomain().configureCluster(info, "cluster1").withReplicas(2).withMaxUnavailable(1);
     defineScenario()
         .withCluster("cluster1", "server1", "server2", "server3", "server4")
         .notStarting("server2", "server3")
         .withServersReachingState(SHUTDOWN_STATE, "server2", "server3")
         .build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1154,10 +1186,11 @@ abstract class DomainStatusUpdateTestBase {
   @Test
   void whenAllDesiredServersRunningButSomeMarkedToBeRolled_establishClusterCompletedConditionFalse() {
     info.setServersToRoll(Map.of("server1", new Step.StepAndPacket(null, null)));
-    configureDomain().configureCluster("cluster1").withReplicas(2).withMaxUnavailable(1);
+    configureDomain().configureCluster(info, "cluster1").withReplicas(2).withMaxUnavailable(1);
     defineScenario()
         .withCluster("cluster1", "server1", "server2", "server3", "server4")
         .build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1169,12 +1202,13 @@ abstract class DomainStatusUpdateTestBase {
   }
 
   @Test
-  void withNonClusteredServerNotStarting_domainIsNotAvailable() {
-    defineScenario().withServers("server1").notStarting("server1").build();
+  void withNonClusteredServerNotReady_domainIsNotAvailable() {
+    defineScenario().withServers("server1", "server2").withServersReachingState(STARTING_STATE, "server1").build();
 
     updateDomainStatus();
 
-    assertThat(getRecordedDomain(), hasCondition(AVAILABLE).withStatus(FALSE));
+    assertThat(getRecordedDomain(), hasCondition(AVAILABLE).withStatus(FALSE)
+        .withMessageContaining(LOGGER.formatMessage(NON_CLUSTERED_SERVERS_NOT_READY, "server1")));
   }
 
   @Test
@@ -1264,11 +1298,12 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenNoMoreThanMaxUnavailableServersNotRunningInACluster_domainIsAvailable() {
-    configureDomain().configureCluster("clusterA").withMaxUnavailable(2);
+    configureDomain().configureCluster(info,"clusterA").withMaxUnavailable(2);
     defineScenario()
           .withCluster("clusterA", "server1", "server2", "server3", "server4")
           .withServersReachingState(SHUTDOWN_STATE, "server3", "server4")
           .build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1278,11 +1313,12 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenTooManyServersNotRunningInACluster_domainIsNotAvailable() {
-    configureDomain().configureCluster("clusterA").withReplicas(4).withMaxUnavailable(2);
+    configureDomain().configureCluster(info,"clusterA").withReplicas(4).withMaxUnavailable(2);
     defineScenario()
           .withCluster("clusterA", "server1", "server2", "server3", "server4")
           .withServersReachingState(SHUTDOWN_STATE, "server2", "server3", "server4")
           .build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1292,12 +1328,13 @@ abstract class DomainStatusUpdateTestBase {
 
   @Test
   void whenNoServersReadyInCluster_domainIsNotAvailable() {
-    configureDomain().configureCluster("clusterA").withMaxUnavailable(2);
+    configureDomain().configureCluster(info,"clusterA").withMaxUnavailable(2);
     defineScenario()
           .withCluster("clusterA", "server1", "server2")
           .build();
     deactivateServer("server1");
     deactivateServer("server2");
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1308,12 +1345,13 @@ abstract class DomainStatusUpdateTestBase {
   @Test
   void whenDomainWasAvailableAndNoLongerIs_domainAvailableConditionIsChangedToFalse() {
     domain.getStatus().addCondition(new DomainCondition(AVAILABLE).withStatus(TRUE));
-    configureDomain().configureCluster("clusterA").withMaxUnavailable(2);
+    configureDomain().configureCluster(info,"clusterA").withMaxUnavailable(2);
     defineScenario()
           .withCluster("clusterA", "server1", "server2")
           .build();
     deactivateServer("server1");
     deactivateServer("server2");
+    info.getReferencedClusters().forEach(testSupport::defineResources);
 
     updateDomainStatus();
 
@@ -1369,6 +1407,30 @@ abstract class DomainStatusUpdateTestBase {
               eventWithReason(DOMAIN_AVAILABLE_EVENT),
               eventWithReason(DOMAIN_ROLL_COMPLETED_EVENT),
               eventWithReason(DOMAIN_COMPLETED_EVENT))));
+  }
+
+  @Test
+  void whenUpdateDomainStatus_verifyClusterStatusObservedGeneration() {
+    configureDomain().configureCluster(info, "cluster1").withReplicas(4).withMaxUnavailable(1);
+    defineScenario().withDynamicCluster("cluster1", 0, 4).build();
+    info.getReferencedClusters().forEach(testSupport::defineResources);
+
+    updateDomainStatus();
+
+    // Get initial ClusterStatus from DomainResource and verify the initial value.
+    ClusterStatus clusterStatus = getClusterStatus();
+    assertThat(clusterStatus.getObservedGeneration(), equalTo(1L));
+
+    // increment the observedGeneration on the deployed ClusterResource and update DomainStatus
+    ClusterResource cs = testSupport.getResourceWithName(KubernetesTestSupport.CLUSTER, "cluster1");
+    cs.getStatus().withObservedGeneration(2L);
+
+    updateDomainStatus();
+
+    // Verify the ClusterStatus was updated with incremented observedGeneration after
+    // DomainStatus update.
+    clusterStatus = getClusterStatus();
+    assertThat(clusterStatus.getObservedGeneration(), equalTo(2L));
   }
 
   private void setUniqueCreationTimestamp(Object event) {
@@ -1529,9 +1591,19 @@ abstract class DomainStatusUpdateTestBase {
   }
 
   @Test
-  void whenAdminOnly_availableIsFalse() {
+  void whenAdminOnlyAndAdminServerIsReady_availableIsTrue() {
     configureDomain().withDefaultServerStartPolicy(ServerStartPolicy.ADMIN_ONLY);
     defineScenario().build();
+
+    updateDomainStatus();
+
+    assertThat(getRecordedDomain(), hasCondition(AVAILABLE).withStatus(TRUE));
+  }
+
+  @Test
+  void whenAdminOnlyAndAdminServerIsNotReady_availableIsFalse() {
+    configureDomain().withDefaultServerStartPolicy(ServerStartPolicy.ADMIN_ONLY);
+    defineScenario().withServersReachingState(STARTING_STATE, "admin").build();
 
     updateDomainStatus();
 
@@ -1598,6 +1670,7 @@ abstract class DomainStatusUpdateTestBase {
     private ScenarioBuilder() {
       configSupport = new WlsDomainConfigSupport("testDomain");
       configSupport.setAdminServerName(ADMIN);
+      addServer(ADMIN);
       defineServerPod(ADMIN);
       activateServer(ADMIN);
     }
